# herb

./: .clang-format-ignore  .gitignore  .oxlintrc.json  CONTRIBUTING.md  Rakefile  Steepfile  config.yml  package.json
.doxygen/: frame.js
.github/workflows/: build.yml  deploy.yml  javascript.yml
docs/.vitepress/: generate-rules.mts
ext/: project.json
ext/herb/: extconf.rb
java/: Makefile
lib/herb/: cli.rb  engine.rb  lex_result.rb  location.rb  parse_result.rb  position.rb  project.rb  range.rb  token.rb  warnings.rb
playground/src/: monaco.js
rust/: Cargo.toml  Makefile  build.rs  rustfmt.toml
rust/herb-config/: Cargo.toml
rust/herb-config/src/: formatter_config.rs  glob.rs  herb_config.rs  lib.rs  linter_config.rs  rule_config.rs  severity.rs
rust/herb-config/tests/: glob_test.rs  herb_config_test.rs  linter_config_test.rs
rust/src/: convert.rs  ffi.rs  herb.rs  lex_result.rs  lib.rs  location.rs  parse_result.rs  token.rs
rust/tests/: cli_commands_test.rs  error_handling_test.rs  parse_result_test.rs  parser_options_test.rs  snapshot_test.rs
sig/herb/: engine.rbs  errors.rbs  location.rbs  position.rbs  range.rbs  token.rbs  visitor.rbs  warnings.rbs
sorbet/: config
sorbet/rbi/: prism.rbi
src/: analyze.c  analyze_conditional_elements.c  analyze_conditional_open_tags.c  analyze_helpers.c  herb.c  main.c  parser.c  parser_helpers.c  pretty_print.c  ruby_parser.c  token.c
src/analyze/: analyze.c  analyzed_ruby.c  builders.c  conditional_elements.c  conditional_open_tags.c  control_type.c  (+3 more)
test/: test_helper.rb
wasm/: Makefile
(+149 files in other folders)
